# eurobarometer_search_tool

./: Pipfile  README.md  main.py  pyproject.toml
