[tool.poetry]
name = "eurobarometer-search-tool"
version = "0.1.0"
description = "Tool to search eurobarometer"
authors = ["Akira Nishii <anishii.personal@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "eurobarometer_search_tool"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.0.1"
streamlit = "^1.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
